fixed checkbox align

--- a/css/styles.css
+++ b/css/styles.css
@@ -987,6 +987,7 @@ body {
 
 .modal-form-checkbox-policy {
   display: inline-block;
+  text-align: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
